--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,42 +1,56 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    tools:context=".MainActivity"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:focusable="true"
+    android:orientation="vertical"
     android:focusableInTouchMode="true">
 
 
-    <EditText
+<EditText
         android:id="@+id/searchBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:maxLines="1"/>
 
-    <ListView
-        android:id="@+id/customerList"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/searchBox"
-        android:layout_weight="1"
-        android:cacheColorHint="#00000000"
-        android:divider="#b5b5b5"
-        android:dividerHeight="1dp"
-        android:choiceMode="singleChoice"
-        android:listSelector="#00000000"
-        />
 
-    <Button
-        android:id="@+id/selectCustomerButton"
-        android:layout_below="@id/customerList"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_weight="0.5"
-        android:layout_height="80dp"
-        android:text="NEXT" />
+        android:layout_height="0dp"
+        android:layout_weight="0.9"
+        android:orientation="vertical" >
+        <ListView
+            android:id="@+id/customerList"
+            android:layout_width = "fill_parent"
+            android:layout_height = "fill_parent"
+            android:layout_weight="1"
+            android:cacheColorHint="#00000000"
+            android:divider="#b5b5b5"
+            android:dividerHeight="1dp"
+            android:choiceMode="singleChoice"
+            android:listSelector="#00000000"/>
+    </LinearLayout>
 
-</RelativeLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.1"
+        android:gravity="center"
+        android:orientation="vertical" >
+        <Button
+            android:id="@+id/selectCustomerButton"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_weight="0.5"
+            android:layout_centerHorizontal="true"
+            android:text="Çay Seçimine Git" />
+    </LinearLayout>
+
+</LinearLayout>
