--- a/app/src/main/res/layout/activity_tea.xml
+++ b/app/src/main/res/layout/activity_tea.xml
@@ -1,6 +1,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -9,13 +11,15 @@
     <ListView
         android:id="@+id/teaList"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         />
 
     <Button
         android:id="@+id/loginButton"
-        android:layout_width="fill_parent"
-        android:layout_height="50dp"
-        android:text="NEXT" />
+        android:layout_width="match_parent"
+        android:layout_below="@id/teaList"
+        android:layout_weight="0.5"
+        android:layout_height="80dp"
+        android:text="Oralet Seçimine Git" />
 
 </RelativeLayout>
