--- a/app/src/main/res/layout/activity_oralet_tea.xml
+++ b/app/src/main/res/layout/activity_oralet_tea.xml
@@ -1,12 +1,20 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    tools:context="com.tr.cay.dagdem.views.sale.OraletTeaActivity"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.tr.cay.dagdem.views.sale.OraletTeaActivity">
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical">
+
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="0dp"
+    android:layout_weight="0.9"
+    android:orientation="vertical" >
 
     <ListView
         android:id="@+id/oraletTeaList"
@@ -15,12 +23,24 @@
         android:layout_weight="1"
         />
 
+</LinearLayout>
+
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="0dp"
+    android:layout_weight="0.1"
+    android:gravity="center"
+    android:orientation="vertical" >
+
     <Button
         android:id="@+id/oraletTeaNextButton"
         android:layout_width="match_parent"
         android:layout_below="@id/oraletTeaList"
         android:layout_weight="0.5"
         android:layout_height="80dp"
-        android:text="Özet Sayfasına Git" />
+        android:text="Özet Sayfasına Git"
+        />
 
-</RelativeLayout>
+</LinearLayout>
+
+</LinearLayout>
