--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,16 +1,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".MainActivity">
 
     <item android:id="@+id/action_search"
         android:icon="@drawable/radio_on"
         android:title="@string/action_search"
-        app:showAsAction="always"/>
+        android:showAsAction="ifRoom"/>
 
     <item android:id="@+id/action_settings"
         android:title="@string/action_settings"
-        app:showAsAction="never" />
+        android:showAsAction="never" />
 
 
 </menu>
