--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,7 +3,7 @@
     tools:context=".MainActivity">
 
     <item android:id="@+id/action_search"
-        android:icon="@drawable/radio_on"
+        android:icon="@drawable/ic_action_search"
         android:title="@string/action_search"
         android:showAsAction="ifRoom"/>
 
