--- a/app/src/main/res/drawable/quantity_text_design.xml
+++ b/app/src/main/res/drawable/quantity_text_design.xml
@@ -1,12 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8" ?>
+<shape
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:thickness="0dp"
     android:shape="rectangle">
 
-    <solid android:color="#FFFFFF"/>
-
-    <stroke
-        android:width="1dp"
+    <stroke android:width="1dp"
         android:color="#4799E8"/>
 
     <corners android:radius="5dp" />
