--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,7 +34,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="0.9"
-        android:orientation="vertical" >
+        android:orientation="vertical">
         <ListView
             android:id="@+id/customerList"
             android:layout_width = "fill_parent"
@@ -44,7 +44,7 @@
             android:divider="#b5b5b5"
             android:dividerHeight="1dp"
             android:choiceMode="singleChoice"
-            android:listSelector="#00000000"/>
+            android:listSelector="@drawable/list_selector"/>
     </LinearLayout>
 
     <LinearLayout
