--- a/app/src/main/res/layout/activity_oralet_tea.xml
+++ b/app/src/main/res/layout/activity_oralet_tea.xml
@@ -13,6 +13,34 @@
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="0dp"
+    android:layout_weight="0.1"
+    android:orientation="horizontal"
+    android:weightSum="2">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:gravity="center_horizontal"
+        android:text="Oralet Adı"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="#993366"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:gravity="center_horizontal"
+        android:text="Oralet Adedi"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="#993366"
+        />
+</LinearLayout>
+
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="0dp"
     android:layout_weight="0.9"
     android:orientation="vertical" >
 
