--- a/app/src/main/res/layout/activity_summary.xml
+++ b/app/src/main/res/layout/activity_summary.xml
@@ -7,7 +7,49 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:orientation="vertical"
+    android:focusable="true"
+    android:clickable="true"
+    android:focusableInTouchMode="true"
     tools:context="com.tr.cay.dagdem.views.sale.SummaryActivity">
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.1"
+        android:orientation="horizontal"
+        android:weightSum="2">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center_horizontal"
+            android:text="Ürün Adı"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="#993366"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center_horizontal"
+            android:text="Ürün Adedi"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="#993366"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center_horizontal"
+            android:text="Ürün Fiyatı"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="#993366"
+            />
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -47,7 +89,6 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center_horizontal"
-            android:text=""
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textColor="#993366"
             />
@@ -65,20 +106,21 @@
             android:layout_height="50dp"
             android:text="Hesapla" />
 
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.1"
-        android:orientation="vertical" >
+        <Button
+            android:id="@+id/saleButton"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:visibility="gone"
+            android:text="Satış Yap" />
 
         <Button
             android:id="@+id/printProductPricesButton"
             android:layout_width="match_parent"
             android:layout_height="50dp"
+            android:visibility="gone"
             android:text="Yazdır" />
 
     </LinearLayout>
+
 
 </LinearLayout>
