--- a/app/src/main/res/layout/activity_tea.xml
+++ b/app/src/main/res/layout/activity_tea.xml
@@ -49,7 +49,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        />
+        android:divider="#b5b5b5"
+        android:dividerHeight="1dp"
+        android:choiceMode="multipleChoice"
+        android:listSelector="@drawable/list_selector"/>
 
 </LinearLayout>
 
@@ -61,7 +64,7 @@
     android:orientation="vertical" >
 
     <Button
-        android:id="@+id/loginButton"
+        android:id="@+id/teaButton"
         android:layout_width="match_parent"
         android:layout_below="@id/teaList"
         android:layout_weight="0.5"
