--- a/app/src/main/res/layout/activity_oralet_tea.xml
+++ b/app/src/main/res/layout/activity_oralet_tea.xml
@@ -15,6 +15,7 @@
     android:layout_height="0dp"
     android:layout_weight="0.1"
     android:orientation="horizontal"
+    android:background="#2F2F2F"
     android:weightSum="2">
 
     <TextView
