--- a/app/src/main/res/layout/activity_summary.xml
+++ b/app/src/main/res/layout/activity_summary.xml
@@ -12,11 +12,39 @@
     android:focusableInTouchMode="true"
     tools:context="com.tr.cay.dagdem.views.sale.SummaryActivity">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.1"
+        android:orientation="vertical">
+
+        <Button
+            android:id="@+id/calculateProductPricesButton"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:text="Hesapla" />
+
+        <Button
+            android:id="@+id/saleButton"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:visibility="gone"
+            android:text="Satış Yap" />
+
+        <Button
+            android:id="@+id/printProductPricesButton"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:visibility="gone"
+            android:text="Yazdır" />
+
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="0.1"
+        android:background="#2F2F2F"
         android:orientation="horizontal"
         android:weightSum="2">
 
@@ -73,7 +101,7 @@
 
         <!--layout_marginLeft:"8dp"  olmayınca text tamamen sola yaslanıyor-->
         <TextView
-            android:layout_width="fill_parent"
+            android:layout_width="100dip"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:layout_marginLeft="8dp"
@@ -85,41 +113,13 @@
 
         <TextView
             android:id="@+id/totalAccountTextView"
-            android:layout_width="wrap_content"
+            android:layout_width="100dip"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center_horizontal"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textColor="#993366"
             />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.1"
-        android:orientation="vertical" >
-
-        <Button
-            android:id="@+id/calculateProductPricesButton"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:text="Hesapla" />
-
-        <Button
-            android:id="@+id/saleButton"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:visibility="gone"
-            android:text="Satış Yap" />
-
-        <Button
-            android:id="@+id/printProductPricesButton"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:visibility="gone"
-            android:text="Yazdır" />
-
     </LinearLayout>
 
 
