--- a/app/src/main/res/layout/activity_tea.xml
+++ b/app/src/main/res/layout/activity_tea.xml
@@ -11,11 +11,7 @@
         android:orientation="vertical">
 
 <LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="0dp"
-    android:layout_weight="0.1"
-    android:orientation="horizontal"
-    android:weightSum="2">
+    style="@style/productHeaderLayoutStyle">
 
     <TextView
         android:layout_width="wrap_content"
@@ -24,7 +20,7 @@
         android:gravity="center_horizontal"
         android:text="Çay Adı"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textColor="#993366"
+        android:textColor="#FFFFFF"
         />
 
     <TextView
