--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,4 +4,18 @@
     <style name="AppTheme" parent="android:style/Theme.Holo.Light">
     </style>
 
+
+    <style name="productHeaderLayoutStyle">
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_height">0dp</item>
+        <item name="android:orientation">horizontal</item>
+        <item name="android:layout_weight">0.1</item>
+        <item name="android:background">#8DC9E9</item>
+        <item name="android:weightSum">2</item>
+        <item name="android:capitalize">characters</item>
+        <item name="android:typeface">monospace</item>
+        <item name="android:textSize">12pt</item>
+        <item name="android:textColor">#00FF00</item>/>
+    </style>
+
 </resources>
