--- a/app/src/main/res/drawable/product_tea_button.xml
+++ b/app/src/main/res/drawable/product_tea_button.xml
@@ -1,28 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:thickness="0dp"
-    android:shape="rectangle">
-
-    <solid android:color="#FFFFFF"/>
-
-    <stroke
-        android:width="1dp"
-        android:color="#4799E8"/>
-
-    <corners android:radius="14dp" />
-
+<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
+    <corners
+        android:radius="14dp"
+        />
     <gradient
+        android:angle="45"
         android:centerX="35%"
         android:centerColor="#E8E8E8"
         android:startColor="#8DC9E9"
         android:endColor="#E3E3E3"
         android:type="linear"
-        android:angle="270"/>
-
+        />
     <padding
         android:left="0dp"
         android:top="0dp"
         android:right="0dp"
         android:bottom="0dp"
+        />
+    <size
+        android:width="270dp"
+        android:height="40dp"
+        />
+    <stroke
+        android:width="1dp"
+        android:color="#F7F4DA"
         />
 </shape>
