--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,10 +16,10 @@
 <EditText
         android:id="@+id/searchBox"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_marginLeft="15dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginTop="3dp"
+        android:layout_marginBottom="3dp"
         android:layout_marginRight="15dp"
         android:layout_centerVertical="true"
         android:ellipsize="start"
@@ -34,6 +34,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="0.9"
+        android:background="#F8F8F1"
         android:orientation="vertical">
         <ListView
             android:id="@+id/customerList"
@@ -51,15 +52,22 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="0.1"
+        android:layout_marginTop="3dp"
         android:gravity="center"
-        android:orientation="vertical" >
+        android:orientation="vertical">
+
         <Button
             android:id="@+id/selectCustomerButton"
+            android:text="Çay Seçimine Git"
+            android:textColor="#878787"
+            android:textSize="18sp"
             android:layout_width="wrap_content"
-            android:layout_height="50dp"
-            android:layout_weight="0.5"
-            android:layout_centerHorizontal="true"
-            android:text="Çay Seçimine Git" />
+            android:layout_height="wrap_content"
+            android:background="@drawable/product_tea_button"
+            android:shadowColor="#A8A8A8"
+            android:shadowDx="0"
+            android:shadowDy="0"
+            android:shadowRadius="5"/>
     </LinearLayout>
 
 </LinearLayout>
