--- a/app/src/main/res/layout/activity_summary.xml
+++ b/app/src/main/res/layout/activity_summary.xml
@@ -13,82 +13,63 @@
     tools:context="com.tr.cay.dagdem.views.sale.SummaryActivity">
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.1"
-        android:orientation="vertical">
-
-        <Button
-            android:id="@+id/calculateProductPricesButton"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:text="Hesapla" />
-
-        <Button
-            android:id="@+id/saleButton"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:visibility="gone"
-            android:text="Satış Yap" />
-
-        <Button
-            android:id="@+id/printProductPricesButton"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:visibility="gone"
-            android:text="Yazdır" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.1"
-        android:background="#2F2F2F"
-        android:orientation="horizontal"
-        android:weightSum="2">
+        android:background="@drawable/product_tea_button"
+        style="@style/productHeaderLayoutStyle">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:gravity="center_horizontal"
+            android:layout_marginTop="14dp"
+            android:layout_marginLeft="5dp"
+            android:gravity="left"
             android:text="Ürün Adı"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textColor="#993366"
+            android:textColor="#878787"
+            android:textSize="18sp"
             />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:layout_marginTop="14dp"
+            android:layout_marginLeft="5dp"
             android:gravity="center_horizontal"
             android:text="Ürün Adedi"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textColor="#993366"
+            android:textColor="#878787"
+            android:textSize="18sp"
             />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:gravity="center_horizontal"
+            android:layout_marginTop="14dp"
+            android:layout_marginRight="5dp"
+            android:gravity="end"
             android:text="Ürün Fiyatı"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textColor="#993366"
+            android:textColor="#878787"
+            android:textSize="18sp"
             />
+
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="0.7"
-        android:orientation="vertical" >
+        android:background="#F8F8F1"
+        android:orientation="vertical"
+        android:layout_marginTop="3dp">
 
         <ListView
             android:id="@+id/summarySaleList"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:divider="#b5b5b5"
+            android:dividerHeight="1dp"
+            android:listSelector="@drawable/list_selector"
             />
     </LinearLayout>
 
@@ -97,6 +78,7 @@
         android:layout_height="0dp"
         android:layout_weight="0.1"
         android:orientation="horizontal"
+        android:layout_marginTop="3dp"
         android:weightSum="2">
 
         <!--layout_marginLeft:"8dp"  olmayınca text tamamen sola yaslanıyor-->
@@ -120,6 +102,57 @@
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textColor="#993366"
             />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.1"
+        android:layout_marginTop="3dp"
+        android:gravity="center"
+        android:orientation="vertical">
+
+        <Button
+            android:id="@+id/calculateProductPricesButton"
+            android:text="Hesapla"
+            android:textColor="#878787"
+            android:textSize="18sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/product_tea_button"
+            android:shadowColor="#A8A8A8"
+            android:shadowDx="0"
+            android:shadowDy="0"
+            android:shadowRadius="5"/>
+
+        <Button
+            android:id="@+id/saleButton"
+            android:text="Satış Yap"
+            android:visibility="gone"
+            android:textColor="#878787"
+            android:textSize="18sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/product_tea_button"
+            android:shadowColor="#A8A8A8"
+            android:shadowDx="0"
+            android:shadowDy="0"
+            android:shadowRadius="5"/>
+
+        <Button
+            android:id="@+id/printProductPricesButton"
+            android:text="Yazdır"
+            android:visibility="gone"
+            android:textColor="#878787"
+            android:textSize="18sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/product_tea_button"
+            android:shadowColor="#A8A8A8"
+            android:shadowDx="0"
+            android:shadowDy="0"
+            android:shadowRadius="5"/>
+
     </LinearLayout>
 
 
