--- a/app/src/main/res/layout/activity_tea.xml
+++ b/app/src/main/res/layout/activity_tea.xml
@@ -11,26 +11,31 @@
         android:orientation="vertical">
 
 <LinearLayout
+    android:background="@drawable/product_tea_button"
     style="@style/productHeaderLayoutStyle">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:gravity="center_horizontal"
-        android:text="Çay Adı"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textColor="#FFFFFF"
+        android:layout_marginTop="14dp"
+        android:layout_marginLeft="5dp"
+        android:gravity="left"
+        android:text="Ürün Adı"
+        android:textColor="#878787"
+        android:textSize="18sp"
         />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:gravity="center_horizontal"
-        android:text="Çay Adedi"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textColor="#993366"
+        android:layout_marginTop="14dp"
+        android:layout_marginRight="5dp"
+        android:gravity="end"
+        android:text="Ürün Adedi"
+        android:textColor="#878787"
+        android:textSize="18sp"
         />
 </LinearLayout>
 
@@ -38,7 +43,9 @@
     android:layout_width="match_parent"
     android:layout_height="0dp"
     android:layout_weight="0.8"
-    android:orientation="vertical" >
+    android:background="#F8F8F1"
+    android:orientation="vertical"
+    android:layout_marginTop="3dp">
 
     <ListView
         android:id="@+id/teaList"
@@ -56,16 +63,22 @@
     android:layout_width="match_parent"
     android:layout_height="0dp"
     android:layout_weight="0.1"
+    android:layout_marginTop="3dp"
     android:gravity="center"
-    android:orientation="vertical" >
+    android:orientation="vertical">
 
     <Button
         android:id="@+id/teaButton"
-        android:layout_width="match_parent"
-        android:layout_below="@id/teaList"
-        android:layout_weight="0.5"
-        android:layout_height="80dp"
-        android:text="Oralet Seçimine Git" />
+        android:text="Oralet Seçimine Git"
+        android:textColor="#878787"
+        android:textSize="18sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/product_tea_button"
+        android:shadowColor="#A8A8A8"
+        android:shadowDx="0"
+        android:shadowDy="0"
+        android:shadowRadius="5"/>
 
 </LinearLayout>
 
