makyaj çalışması yapıldı

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,8 +34,8 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="0.9"
-        android:background="#F8F8F1"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="@drawable/linear_layout_list_style">
         <ListView
             android:id="@+id/customerList"
             android:layout_width = "fill_parent"
