--- a/app/src/main/res/layout/summary_satir_layout.xml
+++ b/app/src/main/res/layout/summary_satir_layout.xml
@@ -12,7 +12,7 @@
 
 <TextView
     android:id="@+id/productName"
-    android:layout_width="150dip"
+    android:layout_width="170dp"
     android:layout_height="wrap_content"
     android:layout_weight="1"
     android:gravity="left"
@@ -22,7 +22,7 @@
 
 <TextView
     android:id="@+id/productQuantity"
-    android:layout_width="30dip"
+    android:layout_width="10dp"
     android:layout_height="wrap_content"
     android:layout_weight="1"
     android:gravity="center_horizontal"
@@ -32,7 +32,7 @@
 
 <EditText
     android:id="@+id/productSalePrice"
-    android:layout_width="130dip"
+    android:layout_width="110dp"
     android:layout_height="fill_parent"
     android:layout_weight="0.5"
     android:layout_centerVertical="true"
