--- a/app/src/main/res/layout/activity_summary.xml
+++ b/app/src/main/res/layout/activity_summary.xml
@@ -118,43 +118,19 @@
         <Button
             android:id="@+id/calculateProductPricesButton"
             android:text="Hesapla"
-            android:textColor="#878787"
-            android:textSize="18sp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/product_tea_button"
-            android:shadowColor="#A8A8A8"
-            android:shadowDx="0"
-            android:shadowDy="0"
-            android:shadowRadius="5"/>
+            style="@style/buttonStyle"/>
 
         <Button
             android:id="@+id/saleButton"
             android:text="Satış Yap"
             android:visibility="gone"
-            android:textColor="#878787"
-            android:textSize="18sp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/product_tea_button"
-            android:shadowColor="#A8A8A8"
-            android:shadowDx="0"
-            android:shadowDy="0"
-            android:shadowRadius="5"/>
+            style="@style/buttonStyle"/>
 
         <Button
             android:id="@+id/printProductPricesButton"
             android:text="Yazdır"
             android:visibility="gone"
-            android:textColor="#878787"
-            android:textSize="18sp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/product_tea_button"
-            android:shadowColor="#A8A8A8"
-            android:shadowDx="0"
-            android:shadowDy="0"
-            android:shadowRadius="5"/>
+            style="@style/buttonStyle"/>
 
     </LinearLayout>
 
