--- a/app/src/main/res/drawable/edit_text_design.xml
+++ b/app/src/main/res/drawable/edit_text_design.xml
@@ -7,22 +7,6 @@
 
     <stroke
         android:width="1dp"
-        android:color="#4799E8"/>
+        android:color="#026772"/>
 
-    <corners android:radius="14dp" />
-
-    <gradient
-        android:centerX="35%"
-        android:centerColor="#E8E8E8"
-        android:startColor="#8DC9E9"
-        android:endColor="#E3E3E3"
-        android:type="linear"
-        android:angle="270"/>
-
-    <padding
-        android:left="0dp"
-        android:top="0dp"
-        android:right="0dp"
-        android:bottom="0dp"
-        />
 </shape>
