--- a/app/src/main/res/layout/activity_oralet_tea.xml
+++ b/app/src/main/res/layout/activity_oralet_tea.xml
@@ -2,16 +2,12 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.tr.cay.dagdem.views.sale.OraletTeaActivity"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="#DCDCDC">
 
     <LinearLayout
-        android:background="@drawable/product_tea_button"
         style="@style/productHeaderLayoutStyle">
 
         <TextView
@@ -44,16 +40,15 @@
         android:layout_height="0dp"
         android:layout_weight="0.8"
         android:orientation="vertical"
-        android:layout_marginTop="3dp"
-        android:background="@drawable/linear_layout_list_style">
+        android:layout_marginTop="3dp">
 
         <ListView
             android:id="@+id/oraletTeaList"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
             android:layout_weight="1"
-            android:divider="#b5b5b5"
-            android:dividerHeight="1dp"
+            android:divider="#CCCCCC"
+            android:dividerHeight="7dp"
             android:choiceMode="multipleChoice"
             android:listSelector="@drawable/list_selector"/>
 
