--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -1,47 +1,110 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    tools:context="com.tr.cay.dagdem.views.payment.PaymentActivity"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:focusable="true"
-    android:orientation="vertical"
     android:clickable="true"
+    android:orientation="vertical"
     android:focusableInTouchMode="true"
-    tools:context=" com.tr.cay.dagdem.views.payment.PaymentActivity">
+    android:background="#DCDCDC">
 
-
-    <TextView
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="Ödeme Tutarı"
-        android:textSize="8pt"
-        android:typeface="serif"
-        android:textColor="#710505"
-        android:gravity="center"
-        />
-
-    <EditText
-        android:id="@+id/customerPaymentText"
+    <TableLayout
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_marginTop="3dp"
-        android:layout_marginBottom="3dp"
-        android:layout_centerVertical="true"
-        android:ellipsize="start"
-        android:gravity="center"
-        android:background="@drawable/quantity_text_design"
-        android:inputType="numberDecimal"
-        android:maxLines="1"
-        />
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:shrinkColumns="*"
+        android:stretchColumns="*"
+        android:weightSum="3"
+        android:layout_marginTop="10dp"
+        android:background="#DCDCDC">
 
-    <Button
-        android:id="@+id/customerPaymentButton"
-        android:text="Ödeme Al"
-        android:gravity="center"
-        style="@style/buttonStyle"/>
+        <TableRow
+            android:layout_weight="2"
+            android:layout_margin="4dp"
+            android:background="#CCCCCC">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="25dp"
+                android:text="Seçili Müşteri"
+                android:textSize="14sp"
+                android:typeface="serif"
+                />
+
+            <TextView
+                android:id="@+id/selectedCustomerTextViewId"
+                android:layout_width="wrap_content"
+                android:layout_height="25dp"
+                android:layout_marginTop="3dp"
+                android:layout_marginBottom="3dp"
+                android:textSize="12sp"
+                android:typeface="monospace"
+                />
+
+        </TableRow>
+
+        <TableRow android:layout_weight="2"
+            android:layout_margin="4dp"
+            android:background="#CCCCCC">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Ödeme Tutarı"
+                android:textSize="14sp"
+                android:typeface="serif"
+                />
+
+            <EditText
+                android:id="@+id/customerPaymentText"
+                android:layout_width="80dp"
+                android:layout_height="25dp"
+                android:layout_weight="1"
+                android:layout_marginTop="3dp"
+                android:layout_marginBottom="3dp"
+                android:ellipsize="middle"
+                android:background="@drawable/quantity_text_design"
+                android:inputType="numberDecimal"
+                android:maxLines="1"
+                android:maxLength="8"
+                />
+        </TableRow>
+
+        <TableRow android:layout_weight="3"
+            android:gravity="left"
+            android:layout_margin="4dp"
+            android:background="#CCCCCC">
+
+            <Button
+                android:id="@+id/returnToCustomerPage"
+                android:text="Müşteri Sayfasına Dön"
+                android:layout_width="100dp"
+                android:layout_height="25dp"
+                android:layout_marginTop="3dp"
+                android:layout_marginBottom="3dp"
+                style="@style/buttonStyle"/>
+
+            <Button
+                android:id="@+id/customerPaymentButton"
+                android:text="Ödeme Al"
+                android:layout_width="50dp"
+                android:layout_height="25dp"
+                android:layout_marginTop="3dp"
+                android:layout_marginBottom="3dp"
+                style="@style/buttonStyle"/>
+
+            <Button
+                android:id="@+id/customerPaymentButton2"
+                android:text="Ödeme Al"
+                android:layout_width="50dp"
+                android:layout_height="25dp"
+                android:layout_marginTop="3dp"
+                android:layout_marginBottom="3dp"
+                style="@style/buttonStyle"/>
+        </TableRow>
+
+    </TableLayout>
 
 </LinearLayout>
