--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -30,17 +30,17 @@
         <item name="android:textColor">#00FF00</item>/>
     </style>
 
-
     <style name="buttonStyle">
-        <item name="android:textColor">#878787</item>
-        <item name="android:textSize">18sp</item>
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:layout_width">250dp</item>
+        <item name="android:layout_height">37dp</item>
         <item name="android:shadowColor">#A8A8A8</item>
         <item name="android:shadowDx">0</item>
         <item name="android:shadowDy">0</item>
         <item name="android:shadowRadius">5</item>
         <item name="android:background">@drawable/product_tea_button</item>
     </style>
+
 
 </resources>
